# Onin

./: .env.example  .gitignore  .lintstagedrc.mjs  CHANGE_LOG.md  DEBUG_MARKETPLACE.md  ERROR_REFACTOR_SUMMARY.md  LICENSE  MARKETPLACE.md  MARKETPLACE_INSTALL_TEST.md  PERMISSIONS_REFACTOR.md  PLUGIN_DOWNLOAD_INSTALL.md  PLUGIN_SOURCE_SEPARATION.md  PLUGIN_WINDOW_BUG_REPORT.md  PROJECT_STATUS.md  README.md  README_zh.md  SCHEDULER_API_DESIGN.md  SCHEDULER_TESTING.md  STATUS.md  baize-request-api-design.md  clipboard-api-implementation.md  monorepo-implementation-plan.md  package.json  plugin_system_design.md  pnpm-lock.yaml  pnpm-workspace.yaml  release.config.cjs  release.config.js  svelte.config.js  tailwind.config.ts  tsconfig.base.json  vercel.json  vite.config.ts
.github/workflows/: build.yml  deploy-docs.yml  manual-build.yml  release-and-build.yml  release.yml  test-build.yml
.kiro/specs/functional-plugin-sdk/: design.md  requirements.md  tasks.md
.kiro/specs/plugin-system/: design.md  requirements.md  tasks.md
.kiro/specs/unified-plugin-sdk/: design.md  requirements.md  tasks.md
.qoder/repowiki/zh/content/: 安全模型.md  应用概述.md  技术栈与依赖.md  数据模型与类型定义.md  调试与日志.md  贡献指南.md
.qoder/repowiki/zh/meta/: repowiki-metadata.json
docs/: api-reference.md  plugin-build-system.md  plugin-development.md
example-plugin/: index.html  main.js  manifest.json
plugins-sdk/: ERROR_HANDLING.md  HTTP_ERROR_DESIGN_DECISION.md  IMPROVED_ERROR_HANDLING.md  PLUGIN_LIFECYCLE.md  package.json  pnpm-lock.yaml  typedoc.json  vitest.config.ts
plugins-sdk-old/: package.json  pnpm-lock.yaml  tsconfig.build.json  tsconfig.json  vite.config.ts
plugins-sdk-old/src/: index.ts  sdk.test.ts  sdk.ts
plugins-sdk-old/src/adapters/: headless.test.ts  headless.ts  index.ts  ui.test.ts  ui.ts
plugins-sdk-old/src/core/: environment.test.ts  environment.ts  index.ts  validation.test.ts  validation.ts
plugins-sdk-old/src/types/: global.d.ts  index.ts
plugins-sdk-old/src/utils/: constants.ts  index.ts
plugins-sdk/examples/: api-namespaces.ts  error-handling.ts  retry-examples.ts
plugins-sdk/src/: index.ts
plugins-sdk/src/adapters/: headless.ts  webview.ts
plugins-sdk/src/api/: clipboard.ts  command.ts  dialog.ts  fs.ts  lifecycle.ts  notification.ts  request.ts  scheduler.ts  settings.ts  storage.ts
plugins-sdk/src/api/__tests__/: lifecycle.test.ts
plugins-sdk/src/core/: dispatch.ts  environment.ts  ipc.ts
plugins-sdk/src/types/: errors.ts  permissions.ts
plugins-sdk/src/utils/: error-parser.ts  retry.ts
plugins-sdk/templates/view-plugin/: package.json.example  vite.lifecycle.config.ts
plugins-sdk/tests/: setup.ts
plugins-sdk/tests/helpers/: setup.ts
plugins-sdk/tests/helpers/mocks/: ipc.ts
plugins-sdk/tests/unit/api/: clipboard.test.ts  command.test.ts  dialog.test.ts  fs.integration.test.ts  fs.test.ts  request.integration.test.ts  scheduler.test.ts
plugins/advanced-example/: plugin.json
plugins/hello-world/: index.js  plugin.json
plugins/hello-world/.svelte-kit/: ambient.d.ts
plugins/hello-world/src/: index.test.ts  index.ts
scripts/: build-plugin.js  dev-server.js  package-utils.js  package.json  plugin-build.config.js
scripts/templates/: plugin-package.json  plugin-tsconfig.json  plugin.json
src/: app.html  index.css  main.ts  type.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  plugin.json
src-tauri/src/: app_cache_manager.rs  app_config.rs  command_manager.rs  file_command_manager.rs  js_runtime.rs  lib.rs  main.rs  permission_manager.rs  plugin_data_manager.rs  plugin_ipc.rs  plugin_loader.rs  plugin_manager.rs  plugin_manifest.rs  plugin_server.rs  plugin_webview_manager.rs  shared_types.rs  shortcut_alias_manager.rs  shortcut_manager.rs  startup_apps_manager.rs  system_commands.rs  unified_launch_manager.rs  window_manager.rs
src-tauri/src/installed_apps/: exe_to_icon.rs  linux.rs  macos.rs  mod.rs  windows.rs
src-tauri/src/plugin_api/: clipboard.rs  command.rs  dialog.rs  fs.rs  mod.rs  notification.rs  request.rs  storage.rs
src-tauri/templates/: plugin-window-controls.js  plugin-window-topbar.html
src/lib/: plugin_api.ts  type.ts
src/lib/api/: marketplace.ts
src/lib/components/: Icon.svelte  TextAttachment.svelte
src/lib/components/marketplace/: InstalledPluginDetail.svelte  MarketplaceView.svelte  PluginCard.svelte
src/lib/components/plugin/: PluginSettings.svelte
src/lib/components/plugins/: PluginDetailsModal.svelte  PluginErrorBoundary.svelte  PluginList.svelte  PluginSearch.svelte
src/lib/stores/: escapeHandler.ts  pluginStore.ts  shortcuts.ts
src/lib/types/: marketplace.ts  plugin.ts
src/lib/utils/: fuzzyMatch.ts
src/routes/: +layout.svelte  +page.svelte
src/routes/plugin-window/: +page.svelte
src/routes/plugins/: +page.svelte
src/routes/settings/: +page.svelte
src/utils/: fuzzyMatch.ts
(+49 files in other folders)
