[package]
name = "baize"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "zephyr_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1.11.1"
lnk = "0.5.1"
walkdir = "2.5.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
windows = { version = "0.57", features = [
  "Win32_UI_Shell",
  "Win32_UI_WindowsAndMessaging",
  "Win32_Graphics_Gdi",
  "Win32_Foundation",
] }
base64 = "0.22"
futures = "0.3" # 用于并发处理 futures
image = "0.25"
# Add `sync` for Mutex and `fs` for async file operations.
tokio = { version = "1", features = [
  "macros",
  "rt-multi-thread",
  "sync",
  "fs",
] }
num_cpus = "1.13"
tauri-plugin-store = "2"
tauri-plugin-dialog = "2"
rdev = "0.5.3"
once_cell = "1.19.0"

[target.'cfg(windows)'.dependencies]
winreg = "0.55"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"
tauri-plugin-global-shortcut = "2"
